


//-------------------------------------------
//  author: 
//  description:  
//-------------------------------------------

namespace DS
{
    public static class ProjectConstant
    {


        public class Layer
        {
        
            public static readonly string GROUND = "Ground";
            public static readonly string ENEMY = "Enemy";
        }

        public class AnimatorParameter
        {
            public static readonly string BASE_LAYER_ANIMTION = "animation";

            public static readonly string FORWARD = "forward";
            public static readonly string JUMP = "jump";
            public static readonly string ON_GROUND = "onGround";
            public static readonly string AIR = "air";
            public static readonly string ROLL = "roll";
            public static readonly string ATTACK = "attack";
            public static readonly string DIE = "die";
            public static readonly string RIGHT = "right";
        }

        public class AnimatorLayer
        {
            public static readonly string BASE = "Base";
           
        }



    }
}

